--- a/css/media.css
+++ b/css/media.css
@@ -274,7 +274,7 @@
     .flex-row {
         flex-direction: column;
     }
-    #home .home-content .row h2 {
+    #home .home-content .row .h02 {
         font-size: 2.2rem;
     }
 }
@@ -288,14 +288,23 @@
     .flex-row {
         flex-direction: column;
     }
-    #home .home-content .row h2 {
-        font-size: 2rem;
-        width: 90%;
+    #home .home-content .row .h02 { /* succinct */
+        font-size: 2.5rem;
+        width: 95%;
+    }
+    #home .home-content__buttons {
+        width:  80%;
+        margin-left: 0px;
+        padding-left: 0px;
+        margin-right: auto;
     }
 
     #home .home-content .flex-row {
-        padding-top: 33%;
+        /*padding-top: 33%;*/
         padding-left: 0px;
+        /*padding-right: 8rem;*/
+    }
+    # home .home-content__buttons {
         padding-right: 8rem;
     }
     /*#home .home-content .flex-row .two-col {
@@ -367,15 +376,16 @@
     #about .section-intro {
         padding-bottom: 0px;
     }
+    #about p {
+        font-size: 1.75rem; /* less than p .ead */
+        /*padding-bottom: 2.2rem;*/
+    }
     #about p.lead {
         font-size: 1.8rem;
+        line-height: 2.7rem;
     }
     #XP p.lead {
         font-size: 1.815rem;
-    }
-    #about p {
-        font-size: 1.65rem; /* less than p .ead */
-        /*padding-bottom: 2.2rem;*/
     }
     #XP h3 {
         font-size: 2.1rem;
